# reviews-nlp-sentiment-analysis

./: Dockerfile  Makefile  README.md  docker-compose.yml  facebook.dev.yml  local_config.yml  notes.txt  pyproject.toml
src/edit_fb_database/: __main__.py
src/edit_fb_database.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
